# surf

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  README.md  go.bat  surf.py
.github/workflows/: build.yml  client-build.yml  surf-build.yml
api/: CMakeLists.txt  Makefile  README.md
api/client/: CMakeLists.txt  Makefile
api/client/include/surf/: Algorithm.h  Argpack.h  Bridge.h  Cfg.h  Define.h  HashTable.h  Interp.h  SymbolTable.h  Utils.h  Vec.h  surf.h
api/client/src/: Algorithm.c  Argpack.c  Bridge.c  Cfg.c  HashTable.c  Interp.c  SymbolTable.c  Utils.c  Vec.c
api/client/tests/: CMakeLists.txt  Main.c
api/client/tests/Unit/: Suite_HashTable.c  Suite_HashTable.h  Suite_Interp.c  Suite_Interp.h  Suite_SymbolTable.c  Suite_SymbolTable.h  Suite_Vec.c  Suite_Vec.h
api/include/surf/: Bridge.h  Utils.h  surf.h
api/server/: Makefile
api/server/include/: Define.h  Server.h
api/server/include/surf/: Server.h
api/server/misc/: Init.c
api/server/src/: Main.c  Server.c  Utils.c
api/src/: Bridge.c  Main.c
api/wrap/: wrap.c  wrap.h
c-interop-example/: Makefile  base.ml  main.c  modwrap.c
client/: CMakeLists.txt  README.md
client/Tests/: CMakeLists.txt  Main.cpp
client/Tests/Unit/: ExampleTest.cpp
client/Wave/: CMakeLists.txt  wpch.h
client/Wave/Assets/: Rock.blend  Sphere.blend  Suzanne.blend  VikingRoom.blend  rock.mtl  stanford_bunny.mtl  suzanne.mtl  viking_room.mtl
client/Wave/Assets/Blend/: Suzanne.blend  Teapot.blend
client/Wave/Codegen/: ReflectedTypes.h
client/Wave/Core/: Assert.h  Asserts.cpp  Asserts.h  Define.h  FileHelpers.cpp  FileHelpers.h  FileSystem.h  HashHelpers.h  Log.cpp  Log.h  Memory.h  StringHelpers.cpp  StringHelpers.h  Timer.cpp  Timer.h
client/Wave/Engine/: Application.cpp  Application.h  Camera.cpp  Camera.h  Main.cpp  SurfEngine.cpp  SurfEngine.h  SurfStore.cpp  SurfStore.h  ToolPanel.cpp  ToolPanel.h  Window.cpp  Window.h
client/Wave/Renderer/: IRenderer.cpp  IRenderer.h  IRendererContext.cpp  IRendererContext.h  Renderer.cpp  Renderer.h  RendererContext.cpp  RendererContext.h  Shader.h
client/Wave/Renderer/Shaders/: CMakeLists.txt
client/Wave/Renderer/Shaders/glsl/: TexturedMesh.frag  TexturedMesh.vert  TexturedPBR.frag  TexturedPBR.vert  Triangle.frag  Triangle.vert  TriangleMesh.frag  TriangleMesh.vert  UntexturedMesh.vert  UntexturedPBR.frag  UntexturedPBR.vert
client/Wave/Renderer/Shaders/hlsl/: TexturedMesh.frag  TexturedMesh.vert  Triangle.frag  Triangle.vert  TriangleMesh.frag  TriangleMesh.vert  UntexturedMesh.vert
client/Wave/Renderer/Vulkan/: VkHardware.cpp  VkHardware.h  VkInitializers.cpp  VkInitializers.h  VkMaterial.cpp  VkMaterial.h  VkMesh.cpp  VkMesh.h  VkModel.cpp  VkModel.h  VkPass.cpp  VkPass.h  VkRenderer.cpp  VkRenderer.h  VkRendererContext.cpp  VkRendererContext.h  VkShaderPipeline.cpp  VkShaderPipeline.h  VkSwapChain.cpp  VkSwapChain.h  VkTypes.h
client/Wave/surf/: 1.surf  10.surf  100.surf  1000.surf  10000.surf  25.surf  50.surf  cfg.surf  demo.surf  fun.surf  pbr.surf
client/src/: Main.cpp
client/test/: ExampleTest.cpp
notes/: surf-ideas.txt  surf-simple-ideas.txt
scripts/: api.py  interp.py  surf.py  utils.py  wave.py
scripts/codegen/: reflect_types.py
surf/: .ocamlformat  Makefile  README.md  dune-project  surf.opam  test.surf
surf/lib/: ast.ml  base.ml  dune  interpreter.ml
surf/surf/lib/: ast.ml  base.ml  dune  env.ml  env.mli  errors.ml  errors.mli  interpreter.ml  lexer.mll  parser.mly  typechecker.ml  typechecker.mli  utils.ml
surf/surf/test/: def_tests.ml  dune  helpers.ml  helpers.mli  surf_tests.ml  test_arithmetic.ml  test_arithmetic.mli  test_bindings.ml  test_bindings.mli  test_builtins.ml  test_builtins.mli  test_errors.ml  test_errors.mli  test_helpers.ml  test_helpers.mli  test_strings.ml  test_strings.mli
surf/test/: def_tests.ml  surf_tests.ml
traces/networked-mocked/: surf.native.trace.json
