(lang dune 3.5)

(name surf)

(generate_opam_files true)

(source
 (github jake-pauls/surf))

(authors "Jake Pauls")

(maintainers "Jake Pauls")

(license LICENSE)

(package
 (name surf)
 (synopsis "surf")
 (description "scripting? the graphics pipeline.")
 (depends ocaml dune)
 (tags
  (graphics dsl interpreter)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project
